--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-radio-group": "^1.2.1",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.11",
     "@sanity/icons": "^3.3.1",
     "@sanity/image-url": "^1.1.0",
     "@sanity/orderable-document-list": "^1.2.2",
